@@ -197,4 +197,5 @@ Here is a list of the currently supported parser related 'tags', 'magic words' a
 {{row|__jsminandstore__ | Proprietary Word| ScriptingTools }}
 {{row|#epropset         | Parser Function | ScriptingTools }}
 
+{{row|__NOCOMMIT__      | Proprietary Word| FileManager }}
 |}
